--- a/output.css
+++ b/output.css
@@ -578,8 +578,16 @@ video {
   bottom: -0.5rem;
 }
 
+.-bottom-24 {
+  bottom: -6rem;
+}
+
 .-top-10 {
   top: -2.5rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
 }
 
 .left-0 {
@@ -592,6 +600,10 @@ video {
 
 .right-2 {
   right: 0.5rem;
+}
+
+.right-4 {
+  right: 1rem;
 }
 
 .right-8 {
@@ -608,6 +620,10 @@ video {
 
 .z-10 {
   z-index: 10;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .m-2 {
@@ -913,6 +929,11 @@ video {
   background-color: rgb(32 227 114 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#3698e8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 152 232 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#E320A9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(227 32 169 / var(--tw-bg-opacity));
@@ -952,8 +973,16 @@ video {
   --tw-bg-opacity: 0.2;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .p-4 {
   padding: 1rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-1 {
@@ -1116,6 +1145,10 @@ video {
   transition-duration: 200ms;
 }
 
+.duration-75 {
+  transition-duration: 75ms;
+}
+
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
@@ -1134,6 +1167,10 @@ video {
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:rounded-full:hover {
+  border-radius: 9999px;
 }
 
 .hover\:border:hover {
@@ -1201,6 +1238,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:hidden {
     display: none;
   }
@@ -1241,6 +1282,10 @@ video {
 
   .xl\:block {
     display: block;
+  }
+
+  .xl\:hidden {
+    display: none;
   }
 
   .xl\:w-\[25\%\] {
